--- a/css-canvas-medical/styles.css
+++ b/css-canvas-medical/styles.css
@@ -49,6 +49,7 @@ p {
 #gsb {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 #forgsb {
@@ -96,6 +97,7 @@ div#links {
   line-height: 1.2em;
   align-content: center;
   font-size: smaller;
+  justify-content: flex-end;
 }
 
 .container > h1 {
@@ -144,6 +146,11 @@ div#links {
   max-width: 68%;
   line-height: 1.8em;
   margin-left: 4em;
+  align-self: flex-start;
+}
+
+#box {
+  align-self: auto;
 }
 
 img {
